# pmvalsampsize

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pmvalsampsize/: __init__.py  pmvalsampsize.py  pmvalsampsize_bin.py  pmvalsampsize_errorcheck.py  summary.py
tests/: test_pmvalsampsize.py
